changed agents parameters

--- a/product_report.html
+++ b/product_report.html
@@ -1,42 +1,46 @@
-<html><head><title>Product Analysis Report</title></head><body><h1>📊 Comprehensive Product Analysis</h1><pre style='white-space: pre-wrap; font-family: sans-serif;'>Due to the limitations of this format, I cannot create actual visual representations (charts, graphs, diagrams) within this text-based response. However, I can provide detailed descriptions of the visualizations that would be included in a comprehensive strategic report for AquaSmart, based on the provided data.  A professional design tool would then be used to create the actual visuals.
+<html><head><title>Product Analysis Report</title></head><body><h1>📊 Comprehensive Product Analysis</h1><pre style='white-space: pre-wrap; font-family: sans-serif;'>The following visualizations are created based on the provided documents for SmartSphere Football.  Due to the limitations of this text-based format, the visualizations are described, and creating actual charts and diagrams would require dedicated design software.
+
 
 **1. Market Analysis Charts and Infographics:**
 
-* **Market Size and Growth:** A bar chart or line graph projecting the total addressable market (TAM), serviceable available market (SAM), and serviceable obtainable market (SOM) for AquaSmart over a 5-year period.  Data sources (Statista, etc.) would be clearly cited.  An infographic could visually represent the breakdown of the TAM, highlighting the target audience segments.
-* **Market Segmentation:** A pie chart showing the distribution of AquaSmart's target market across different segments (health-conscious individuals, athletes, health-conscious professionals).  Each segment would be color-coded and clearly labeled with its size and percentage.
-* **Industry Trends:** An infographic summarizing key industry trends, such as the growth of wearable technology, the focus on wellness, and the increasing demand for personalized health solutions.  This could use icons and concise text to highlight key points.
-* **Market Entry Barriers:** A bar chart comparing the relative importance of various market entry barriers (product development costs, competition, supply chain management, marketing and distribution).  This visual would help prioritize mitigation strategies.
+* **Total Addressable Market (TAM) Breakdown:** A pie chart showing the breakdown of the TAM across youth leagues, college programs, individual players, and professional scouts.  Each segment would be visually represented with a different color and labeled with its estimated annual revenue.  A separate bar chart would display the projected TAM growth over the next 5 years, showcasing the projected annual growth rate.
+
+* **Market Trends Infographic:** A visually appealing infographic illustrating key market trends driving the demand for smart sports equipment.  This would include icons representing data-driven training, gamification, personalized training, and improved scouting.  Each trend would be briefly explained with a concise description and a relevant image.
+
+* **Market Segmentation Chart:** A segmented bar chart showing the estimated market size and potential revenue for each customer segment (youth players, college athletes, professional scouts).  The chart would visually represent the relative size of each segment and their projected revenue contributions.
 
 
 **2. Competitive Positioning Maps:**
 
-* **Competitive Landscape Map:** A perceptual map plotting AquaSmart and its competitors (HydrateSmart, SmartSip, Fitbit, etc.) based on two key dimensions, such as "Price" and "Features."  Each competitor would be represented by a point on the map, allowing for easy visual comparison.  A legend would clearly define the axes and symbols.
-* **Feature Comparison Matrix:** A table visualizing the feature comparison matrix from the Competitive Analysis Report.  Color-coding could be used to highlight AquaSmart's advantages and disadvantages compared to competitors.
+* **Perceptual Map:** A two-dimensional scatter plot mapping competitors based on two key attributes, such as "Price" and "Data Features."  SmartSphere Football would be plotted on the map, highlighting its unique position relative to competitors like Whoop, Garmin, Fitbit, Sportradar, and Opta.  Each competitor would be represented by a different color-coded marker, labeled with its name.
+
+* **Competitive Feature Matrix:** A table comparing SmartSphere Football's key features with those of its competitors.  The table would list features (e.g., sensor types, data accuracy, mobile app features) and rate each competitor's performance on a scale (e.g., 1-5 stars or checkmarks/crosses).
 
 
 **3. Financial Projection Charts:**
 
-* **Revenue Projections:**  A line graph showing projected revenue for AquaSmart over a 3-year period, broken down by revenue stream (product sales, subscriptions, sensor sales, B2B).  Key assumptions would be clearly stated in a legend or separate table.
-* **Profitability Projections:** A line graph showing projected net income and gross profit margin over the 3-year period.  This would help illustrate the financial viability of the business model.
-* **Cash Flow Projections:** A cash flow statement visualization, possibly a waterfall chart showing cash inflows and outflows over time. This would highlight funding needs and break-even points.
-* **Break-Even Analysis:** A simple chart showing the break-even point in units sold and revenue generated.
+* **Revenue Projection Chart:** A line chart showing the projected revenue for SmartSphere Football over the next three years, broken down by sales channel (direct sales, retail partnerships, subscription model).  The chart would visually represent the projected revenue growth over time.
+
+* **Profitability Chart:** A line chart showing the projected gross profit, operating income, and net income for SmartSphere Football over the next three years.  The chart would visually represent the company's profitability over time and highlight the break-even point.
+
+* **Cash Flow Projection Chart:** A cash flow statement represented visually as a waterfall chart, showing the initial investment, projected cash inflows (revenue), cash outflows (expenses), and the resulting cash balance over the three-year period.
 
 
 **4. Customer Segmentation Diagrams:**
 
-* **Customer Segmentation Matrix:** A table summarizing the customer segmentation matrix from the Customer Insights Report.  Color-coding or visual cues could highlight the key characteristics of each segment.
-* **User Personas:**  Visual representations of the user personas (Sarah, Mark, David) could be included.  These could be simple illustrations with key characteristics and quotes.
-* **Customer Journey Map:** A flowchart illustrating the customer journey for each persona, highlighting touchpoints, emotions, and pain points at each stage.
+* **Customer Persona Profiles:**  A series of infographics representing each customer persona (Youth Player, College Athlete, Professional Scout).  Each infographic would include a visual representation of the persona (photo or illustration), key demographics, psychographics, goals, frustrations, and tech savviness.
+
+* **Customer Journey Map:**  A flowchart or process map visually depicting the customer journey for each persona, highlighting key touchpoints, emotions, pain points, and opportunities at each stage.
 
 
 **5. Implementation Timeline Visualizations:**
 
-* **Gantt Chart:** A Gantt chart depicting the project timeline for AquaSmart's development and launch, showing key milestones, tasks, dependencies, and durations.  Critical path would be highlighted.
+* **Gantt Chart:** A Gantt chart displaying the project timeline for SmartSphere Football development, including key milestones, tasks, durations, and dependencies.  The chart would visually represent the project schedule and highlight critical path activities.
 
 
 **6. KPI Dashboard Mockups:**
 
-* **KPI Dashboard:** A mockup of a KPI dashboard, displaying key metrics across different categories (business performance, product usage, customer satisfaction, financial performance, operational efficiency).  The dashboard would utilize charts and graphs (bar charts, line graphs, gauges) to present data visually and concisely.  Targets and benchmarks would be clearly displayed.  The dashboard would be designed for easy interpretation and actionable insights.  Examples of KPIs to include:  Customer Acquisition Cost (CAC), Customer Lifetime Value (CLTV), Monthly Recurring Revenue (MRR), Net Promoter Score (NPS), Daily Active Users (DAU), Monthly Active Users (MAU), Customer Satisfaction Score (CSAT), Revenue, Gross Profit Margin, and Net Profit Margin.
+* **KPI Dashboard Design:**  A mockup of a KPI dashboard showing key performance indicators across business performance, product usage, customer satisfaction, financial performance, operational efficiency, and growth/retention.  The dashboard would use a variety of charts and graphs (line charts, bar charts, gauges) to visually represent the KPIs, allowing for quick monitoring of key metrics.  The dashboard would be designed to be easily understood by executives and stakeholders. The dashboard would include data visualizations for the KPIs described in the KPI framework above.
 
 
-These visualizations, created using professional design software, would significantly enhance the clarity and impact of the AquaSmart strategic report, making it more effective for decision-making.</pre><h2>🔍 Visual Insights</h2><div><img src='visualizations/market_size_analysis.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/competitive_positioning.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/financial_projections.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/customer_segmentation.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/implementation_timeline.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/kpi_dashboard.png' style='max-width: 800px; margin: 20px 0;'><hr></div></body></html>
+These visualizations, when created using appropriate design software, will provide clear, concise, and compelling insights for executive audiences, facilitating informed decision-making related to the SmartSphere Football product.</pre><h2>🔍 Visual Insights</h2><div><img src='visualizations/market_size_analysis.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/competitive_positioning.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/financial_projections.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/customer_segmentation.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/implementation_timeline.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/kpi_dashboard.png' style='max-width: 800px; margin: 20px 0;'><hr></div></body></html>
