--- a/product_report.html
+++ b/product_report.html
@@ -1,67 +1,63 @@
-<html><head><title>Product Analysis Report</title></head><body><h1>📊 Comprehensive Product Analysis</h1><pre style='white-space: pre-wrap; font-family: sans-serif;'>**Executive Insights Architect Strategic Report: AquaSmart Smart Hydration Bottle**
+<html><head><title>Product Analysis Report</title></head><body><h1>📊 Comprehensive Product Analysis</h1><pre style='white-space: pre-wrap; font-family: sans-serif;'>**Executive Insights Architect Report: Hygieia Home Smart Toilet**
 
 **1. Executive Summary**
 
-This report synthesizes market research, competitive analysis, financial projections, technical feasibility assessments, and customer segmentation to provide a comprehensive strategic plan for launching AquaSmart, a smart hydration bottle.  Market research indicates a significant Total Addressable Market (TAM) with strong growth potential, driven by increasing health consciousness and the adoption of wearable technology.  However, the market is competitive, with established players offering similar solutions.  AquaSmart's unique value proposition lies in its accurate, automatic tracking, personalized hydration plans, engaging gamification, and comprehensive data insights.  Financial projections suggest strong profitability within three years, contingent on successful customer acquisition and retention.  Technical feasibility is high, though careful consideration of scalability and security is required.  The recommended go-to-market strategy emphasizes a multi-channel approach, leveraging digital marketing, strategic partnerships, and targeted content marketing to reach key customer segments.
+This report synthesizes market research, competitive analysis, financial projections, technical feasibility studies, and customer segmentation to provide a comprehensive strategic assessment for launching "Hygieia Home," a smart toilet incorporating automated cleaning, basic health monitoring (MVP), personalization, and smart home integration.  Market research indicates a positive outlook, particularly within high-income households and health-conscious individuals, although price sensitivity needs further investigation.  The competitive landscape reveals opportunities for differentiation through superior hygiene features and proactive health monitoring.  Financial projections suggest a break-even point within the first three years, contingent upon successful customer acquisition and retention.  Technical feasibility is high, utilizing a robust and scalable technology stack, but security and regulatory compliance require careful attention.  The key to success hinges on validating market demand, achieving cost-effective manufacturing, and establishing a strong brand presence.
+
+**2. Strategic Recommendations**
+
+* **Targeted Market Entry:** Initially focus on high-income households and health-conscious individuals in select geographic regions, leveraging digital marketing and strategic partnerships with premium bathroom retailers.
+* **Product Iteration:**  Launch with core features (automated cleaning, personalization) as an MVP, followed by phased rollout of health monitoring and smart home integration based on user feedback and market response.
+* **Pricing Strategy:**  Employ a value-based pricing strategy, emphasizing the superior hygiene and convenience benefits, while exploring tiered pricing models to cater to different customer segments.
+* **Brand Building:**  Develop a premium brand image emphasizing hygiene, health, and technological innovation, utilizing high-quality visuals and compelling messaging across digital channels.
+* **Strategic Partnerships:**  Collaborate with bathroom designers, smart home integrators, and healthcare providers to expand market reach and enhance product credibility.
+* **Continuous Monitoring and Improvement:**  Establish a robust system for collecting user feedback, monitoring key performance indicators (KPIs), and adapting the product and marketing strategies based on market response.
+
+**3. Detailed Implementation Roadmap**
+
+**Phase 1: Pre-Launch (6 Months)**
+
+* **Month 1-2:**  Complete detailed market research to refine target audience, pricing strategy, and channel selection. Finalize product design and specifications. Secure seed funding.
+* **Month 3-4:**  Initiate product development, focusing on core features (automated cleaning, personalization).  Develop marketing materials and website.
+* **Month 5-6:**  Conduct beta testing with a select group of users.  Finalize manufacturing plans and secure supply chain partners.
+
+**Phase 2: Launch (3 Months)**
+
+* **Month 7:**  Official product launch in select target markets.  Initiate targeted digital marketing campaigns.  Secure media coverage.
+* **Month 8-9:**  Monitor sales, gather user feedback, and address any technical issues.  Refine marketing strategies based on early performance.
+
+**Phase 3: Growth and Expansion (Ongoing)**
+
+* **Month 10-12:**  Introduce health monitoring features (MVP).  Expand into new geographic markets.  Explore strategic partnerships.
+* **Ongoing:**  Continuously monitor KPIs, adapt product and marketing strategies, and plan for future product iterations (smart home integration, advanced health monitoring).
+
+**4. Risk Assessment and Mitigation Strategies**
+
+| Risk                                  | Likelihood | Impact          | Mitigation Strategy                                                                     |
+|---------------------------------------|-------------|-----------------|------------------------------------------------------------------------------------|
+| High manufacturing costs              | Medium      | High             | Explore alternative manufacturing processes. Negotiate favorable supply chain contracts. |
+| Low initial market demand             | Medium      | High             | Conduct extensive market research.  Develop a strong marketing strategy.              |
+| Regulatory hurdles                     | Medium      | High             | Consult with legal and regulatory experts.  Ensure compliance with all applicable laws. |
+| Technical challenges                   | Low         | Medium          | Develop a robust technology stack.  Conduct thorough testing and quality assurance.  |
+| Intense competition                    | High        | Medium          | Focus on differentiation.  Develop a strong brand identity.                            |
+| Data privacy and security concerns    | High        | High             | Implement robust security measures.  Comply with all relevant data privacy regulations. |
 
 
-**2. Key Findings**
+**5. Critical Success Factors**
 
-* **Market Opportunity:**  A substantial TAM exists for smart hydration bottles, with significant growth potential.  However, competition is present.
-* **Competitive Advantage:** AquaSmart offers superior accuracy, personalization, and engagement compared to existing solutions.
-* **Financial Viability:** Projected financials demonstrate strong revenue growth and profitability within three years, depending upon successful customer acquisition.
-* **Technical Feasibility:** The product is technically achievable, but careful planning and execution are vital for scalability and security.
-* **Customer Segmentation:** Four key customer segments have been identified (Budget-Conscious Shoppers, Premium Users, Tech-Savvy Explorers, Loyalists), each requiring a tailored marketing approach.
-
-
-**3. Strategic Recommendations**
-
-* **Product Development:** Prioritize development of core features (accurate tracking, personalized goals, smart reminders, data visualization) before expanding into integrations with other health apps.
-* **Go-to-Market Strategy:** Implement a multi-channel marketing strategy emphasizing digital marketing (SEO/SEM, social media advertising, influencer marketing), strategic partnerships (fitness centers, health apps), and targeted content marketing tailored to each customer segment.
-* **Pricing Strategy:**  Adopt a tiered pricing model to cater to different customer segments (Basic, Premium, Enterprise).  Utilize value-based pricing to highlight the value proposition.
-* **Customer Acquisition:** Focus on cost-effective customer acquisition strategies, leveraging organic reach and strategic partnerships alongside paid advertising.
-* **Customer Retention:**  Implement a robust customer onboarding program, provide exceptional customer support, and foster a strong brand community.
-* **Technology Stack:** Utilize the recommended technology stack (React.js, Node.js, PostgreSQL, AWS) to ensure scalability, security, and performance.
-* **Financial Management:** Secure initial funding, monitor key financial metrics (MRR, CAC, CLTV), and adapt the financial model as needed.
+* **Strong Brand Identity:**  Creating a premium brand image that resonates with the target audience.
+* **Superior Product Quality:**  Ensuring the product meets high standards of functionality, reliability, and user experience.
+* **Effective Marketing and Sales:**  Reaching the target audience through the right channels and delivering a compelling value proposition.
+* **Strategic Partnerships:**  Collaborating with key players in the industry to expand market reach and credibility.
+* **Agile Development and Iteration:**  Adapting the product and marketing strategies based on user feedback and market trends.
 
 
-**4. Implementation Roadmap**
+**6. Prioritized Action Plan and Next Steps**
 
-**Phase 1 (Months 1-3):**  Product development (MVP), secure seed funding, develop marketing materials, build website and CRM system.
-**Phase 2 (Months 4-6):**  Beta testing, finalize pricing strategy, launch pre-order campaign, initiate PR and influencer outreach.
-**Phase 3 (Months 7-9):**  Official product launch, initiate marketing campaigns (paid and organic), monitor key metrics, adjust strategies as needed.
-**Phase 4 (Months 10-12):**  Expand marketing reach, explore strategic partnerships, analyze customer feedback, iterate on product features.
-**Phase 5 (Months 13-18):**  Scale operations, explore international markets, develop new product features, consider Series A funding.
-
-
-**5. Risk Assessment and Mitigation**
-
-| Risk                     | Probability | Impact       | Mitigation Strategy                                                              |
-|--------------------------|-------------|--------------|------------------------------------------------------------------------------------|
-| Intense competition       | High         | High         | Differentiate through superior features, strong branding, and targeted marketing.    |
-| Technological challenges | Medium       | Medium       | Employ robust testing, prioritize core features, and secure experienced developers. |
-| Customer acquisition cost | Medium       | Medium       | Utilize cost-effective marketing strategies, focus on high-value customer segments. |
-| Regulatory hurdles        | Low          | Medium       | Proactively monitor and comply with relevant regulations.                             |
-| Manufacturing delays      | Low          | High         | Secure multiple suppliers, establish strong supplier relationships.                 |
+* **Immediate Actions (within 1 month):** Finalize market research, secure seed funding, initiate product development.
+* **Short-Term Actions (within 3 months):**  Develop marketing materials, build website, begin beta testing.
+* **Medium-Term Actions (within 6 months):**  Finalize manufacturing plans, establish supply chain, secure distribution channels.
+* **Long-Term Actions (ongoing):**  Monitor KPIs, gather user feedback, expand into new markets, plan for future product iterations.
 
 
-**6. Critical Success Factors**
-
-* **Successful Product Development:** Delivering a high-quality product that meets customer expectations is paramount.
-* **Effective Marketing and Sales:** Reaching the target audience with compelling messaging and driving conversions is crucial.
-* **Strong Customer Relationships:** Building trust and loyalty through exceptional customer service and engagement is essential.
-* **Scalable Technology Infrastructure:**  Ensuring the system can handle increasing demand is vital for long-term growth.
-* **Efficient Financial Management:**  Securing sufficient funding and managing costs effectively are key to profitability.
-
-
-**7. Prioritized Action Plan and Next Steps**
-
-* **Within 1 week:** Finalize product specifications and initiate product development.
-* **Within 2 weeks:** Secure seed funding.
-* **Within 4 weeks:** Complete website development and CRM system setup.
-* **Within 6 weeks:** Begin beta testing.
-* **Within 8 weeks:** Finalize marketing materials and launch pre-order campaign.
-* **Ongoing:**  Monitor key metrics, adapt strategies as needed, and maintain continuous communication with stakeholders.
-
-
-This report provides a comprehensive strategic framework for launching AquaSmart.  Regular monitoring of KPIs and iterative adjustments to the strategy will be crucial to achieving success.  Further detailed analysis may be required to refine specific aspects of the plan.</pre><h2>🔍 Visual Insights</h2><div><img src='visualizations/market_size_analysis.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/competitive_positioning.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/financial_projections.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/customer_segmentation.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/implementation_timeline.png' style='max-width: 800px; margin: 20px 0;'><hr></div><div><img src='visualizations/kpi_dashboard.png' style='max-width: 800px; margin: 20px 0;'><hr></div></body></html>
+This report provides a strategic framework for launching Hygieia Home.  Continuous monitoring, adaptation, and data-driven decision-making will be critical for achieving long-term success.</pre><h2>🔍 Visual Insights</h2></body></html>
